--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -26,6 +26,7 @@ $dark-gray: #333;
 $medium-gray: #999;
 $light-gray: #ddd;
 $white: #fff;
+
 // Flat UI Colors. For more, see http://flatuicolors.com/
 $turquoise: #1abc9c;	// Turqoise
 $green: #27ae60;	  	// Nephritis
@@ -40,7 +41,7 @@ $bc-red: #bc0000;
 // Font Colors
 $base-background-color: #fff;
 $base-font-color: $dark-gray;
-$action-color: $blue;
+$action-color: $dark-gray;
 $highlight-color: tint($action-color, 33%);
 
 // Border
