--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -113,7 +113,7 @@ pre code.hljs {
 *	Header
 */
 .navigation {
-	box-shadow: 0 2px $highlight-color;
+	box-shadow: 0 2px $dark-gray;
 	padding: 0 1em;
 	margin: 0;
 	// Remove this to make header scrollable again
